--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,45 @@
 @tailwind components;
 @tailwind utilities;
 
+
+body {
+  background-color: #111010;
+}
+
+h1 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 1.2;
+  color: white;
+}
+
+p {
+  font-size: 1rem;
+  font-weight: 700;
+  line-height: 1.2;
+  color: #8e8f93;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #8e8f93;
+  border-radius: 5px;
+  border: 3px solid #011019;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #ffffff;
+}
+
+
 ::selection {
   background-color: #47a3f3;
   color: #fefefe;
