--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,35 @@ h3 {
 } */
 
 
+/* .group {
+  transition: transform 0.3s ease, background-color 0.3s ease;
+  transform: scale(1); 
+  background-color: transparent;
+}
+
+.group:hover {
+  transform: scale(1.05); 
+  background-color: #f5f5f5;
+}
+
+
+.group .nav-item {
+  transition: opacity 0.3s ease, background-color 0.3s ease;
+  opacity: 0.7; 
+}
+
+.group:hover .nav-item:nth-child(1) {
+  transition-delay: 0.1s; 
+  opacity: 1;
+  background-color: #e0e0e0;
+}
+
+.group:hover .nav-item:nth-child(2) {
+  transition-delay: 0.2s; 
+  opacity: 1;
+  background-color: #e0e0e0;
+} */
+
 .react-pdf__Page__textContent {
   display: none !important;
 }
